--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:gravity="center"
+    android:orientation="vertical"
     android:padding="16dp">
 
     <Button
@@ -16,6 +16,12 @@
         android:id="@+id/btnViewStatistics"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Xem Thống Kê"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginTop="10dp"
+        android:text="Xem Thống Kê" />
+
+    <Button
+        android:id="@+id/budgetSetting"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="BudgetSetting" />
 </LinearLayout>
