--- a/app/src/main/res/layout/activity_budget_setting.xml
+++ b/app/src/main/res/layout/activity_budget_setting.xml
@@ -27,6 +27,7 @@
                 android:padding="8dp">
 
                 <TextView
+                    android:id="@+id/btn_back"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
