--- a/app/src/main/res/layout/activity_expense.xml
+++ b/app/src/main/res/layout/activity_expense.xml
@@ -21,19 +21,22 @@
         android:padding="16dp" />
 
     <!-- Danh sách khoản chi -->
-    <ListView
-        android:id="@+id/expenseListView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:divider="@android:color/darker_gray"
-        android:dividerHeight="1dp"
-        app:layout_constraintTop_toBottomOf="@id/totalExpense"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/btnAddExpense"
-        android:padding="8dp" />
 
     <!-- Nút Thêm khoản chi -->
+    <ListView
+        android:id="@+id/expenseListView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:divider="@android:color/darker_gray"
+        android:dividerHeight="1dp"
+        android:padding="8dp"
+        app:layout_constraintBottom_toTopOf="@id/btnAddExpense"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/totalExpense"
+        app:layout_constraintVertical_bias="0.0" />
+
     <Button
         android:id="@+id/btnAddExpense"
         android:layout_width="wrap_content"
