--- a/app/src/main/res/layout/activity_expense_setting.xml
+++ b/app/src/main/res/layout/activity_expense_setting.xml
@@ -43,28 +43,16 @@
                 android:textStyle="bold" />
         </FrameLayout>
 
-        <!-- Expense Cards Container -->
-        <LinearLayout
-            android:id="@+id/expenseContainer"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_marginTop="10dp"
-            android:layout_marginHorizontal="10dp" />
-
-        <!-- Action Buttons -->
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="16dp"
-            android:paddingHorizontal="10dp"
-            android:weightSum="3">
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
             <Button
                 android:id="@+id/btn_add_expense"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginStart="8dp"
                 android:layout_weight="1"
                 android:text="Add Expense" />
 
@@ -76,6 +64,21 @@
                 android:layout_weight="1"
                 android:text="Edit Expense" />
 
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btn_addrecurring_expense"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="8dp"
+                android:layout_weight="1"
+                android:text="Add Recurring Expense" />
+
             <Button
                 android:id="@+id/btn_delete_expense"
                 android:layout_width="match_parent"
@@ -83,6 +86,23 @@
                 android:layout_marginStart="8dp"
                 android:layout_weight="1"
                 android:text="Delete Expense" />
+
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"></LinearLayout>
+
+        <!-- Expense Cards Container -->
+        <LinearLayout
+            android:id="@+id/expenseContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="10dp"
+            android:layout_marginHorizontal="10dp" />
+
+        <!-- Action Buttons -->
     </LinearLayout>
 </ScrollView>
