--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -122,11 +122,11 @@
             android:layout_marginTop="10dp" />
 
         <Button
-            android:id="@+id/nav_btn_settings"
+            android:id="@+id/btn_feedback"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Settings"
-            android:layout_marginTop="10dp" />
+            android:layout_marginTop="10dp"
+            android:text="FeedBack" />
 
         <Button
             android:id="@+id/nav_btn_logout"
