--- a/app/src/main/res/layout/activity_admin_dashboard.xml
+++ b/app/src/main/res/layout/activity_admin_dashboard.xml
@@ -35,19 +35,42 @@
                 android:gravity="center"
                 android:paddingTop="16dp"
                 android:paddingBottom="16dp" />
-
             <Button
-                android:id="@+id/btn_manage_users"
+                android:id="@+id/btn_add_user"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Manage Users" />
-
-            <Button
-                android:id="@+id/btn_view_reports"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="View Reports"
+                android:text="Add New User"
                 android:layout_marginTop="10dp" />
+            <Button
+                android:id="@+id/btn_edit_user"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Edit User"
+                android:layout_marginTop="10dp" />
+            <Button
+                android:id="@+id/btn_delete_user"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Delete User"
+                android:layout_marginTop="10dp" />
+            <Button
+                android:id="@+id/btn_add_shared_expense"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Add Shared Expense"
+                android:layout_margin="8dp" />
+            <Button
+                android:id="@+id/btn_view_feedback"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="View Feedback"
+                android:layout_marginTop="12dp"/>
+
+
+
+
+
+
 
             <Button
                 android:id="@+id/btn_admin_logout"
